--- a/doc/手写Spring/1. Spring思想剖析.md
+++ b/doc/手写Spring/1. Spring思想剖析.md
@@ -4,8 +4,15 @@
 
 #### 思想:
 1. 需要一个核心类-应用容器上下文
+   
 2. 需要支持可配置-配置类
 3. 需要支持可定义-组件类
 4. 需要支持可查询-扫描类
 5. 需要支持可识别-注解类
+   
+6. 创建对象
+7. 创建代理类
+8. 依赖注入->依赖对象的注入(不关心依赖对象的创建,只关心使用)
+9. 切面-> 对象处理业务前后的逻辑拓展
 
+10. 三生万物 -> 国际化,缓存机制,BeanFactory(创建对象的工厂模式)......
