--- a/doc/手写Spring/1. Spring思想剖析.md
+++ b/doc/手写Spring/1. Spring思想剖析.md
@@ -12,7 +12,7 @@
    
 6. 创建对象
 7. 创建代理类
-8. 依赖注入->依赖对象的注入(不关心依赖对象的创建,只关心使用)
+8. 依赖注入->依赖对象的注入(不关心依赖对象的创建和销毁,只关心使用)
 9. 切面-> 对象处理业务前后的逻辑拓展
 
 10. 三生万物 -> 国际化,缓存机制,BeanFactory(创建对象的工厂模式)......
